<resources>
    <string name="app_name">Food App</string>
    <string name="choice_your_nfavorite_coffee">Choice_your\nFavorite Coffee</string>
    <string name="get_start">Get Started</string>
    <string name="search">Search...</string>
    <string name="populate_coffees">Populate Coffees</string>
    <string name="cart">Cart</string>
    <string name="explorer">Explorer</string>
    <string name="profile">Profile</string>
    <string name="enter_your_discount_code">Enter Your Discount Code</string>
    <string name="apply">Apply</string>
</resources>